crates/rondo-tui/tests/snapshots/snapshots__pomodoro_overlay.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                    ⊙ RO · HH:MM:SS · ◷ 1/2 · ⏵ P1 · ☑3 "
"┌─ navegación ───────────┐┏━ inbox · 3 tareas · default (status, priority, due) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│  [i] ◉ INBOX       3   │┃     ESTADO  PRI     TAREA                                                                  ┃"
"│  [t] ◷ HOY         1   │┃ ▌ ▌ [ ]   ◖URG◗  Refactor pomodoro module   ◖in 1d◗   ⛒ blocked                            ┃"
"│  [p] ⏵ PRÓXIMAS    2   │┃           #refactor  #work                                                                 ┃"
"│  [A] ◇ TODAS       4   │┃   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌   ┃"
"└────────────────────────┘┃   ▏ [ ]   ◖low◗  Buy groceries   ◖in 2d◗                                                   ┃"
"┌─ filtros rápidos ──────┐┃           #personal                                                                        ┃"
"│  [u] ! URGENTES    1   │┃   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌   ┃"
"│  [H] ↑ ALTA PRIO   2   │┃   ╭ ◉ Focus Session ─────────────────────────────────────────╮                             ┃"
"│  [o] ⌧ VENCIDAS        │┃   │                         Focus 1/4                        │                             ┃"
"│  [P] ◐ EN PROGRESO 1   │┃   │                 Refactor pomodoro module                 │                             ┃"
"│  [n] # SIN ETIQUETA 1  │┃   │                   ▟▀▙ █▀▀  ▄  ▟▀▜▖▟▀▜▖                   │                             ┃"
"│  [c] ✓ COMPLETADAS 1   │┃   │                    ▄▛ ▀▀▙  ▀  █▗█▌█▗█▌                   │                             ┃"
"│                        │┃   │                   ▟▘▄ ▄ █  ▄  █▛▐▌█▛▐▌                   │                             ┃"
"│                        │┃   │                   ▀▀▀ ▝▀▘  ▀  ▝▀▀ ▝▀▀                    │                             ┃"
"│                        │┃   │                                                          │                             ┃"
"│                        │┃   │                                                          │                             ┃"
"│                        │┃   │                                                          │                             ┃"
"│                        │┃ PR│                                                          │▱▱▱▱▱▱▱▱▱▱▱▱▱] 25%   1/4     ┃"
"│                        │┃   │                                                          │                             ┃"
"└────────────────────────┘┗━━━│                                                          │━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ vista general ────┐┌─ próxi╰──────────────────────────────────────────────────────────╯─┐┌─ sincronización ─────────┐"
"│                    ││    1    1    1                 ││   work      ▰▰▰▱▱▱▱▱▱▱▱▱   2 (33 ││  ESTADO     Conectado    │"
"│   4  TOTAL         ││    ██   ██   ██                ││   (sin tag) ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  ÚLTIMA     HH:MM:SS     │"
"│                    ││    ██   ██   ██                ││   backend   ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  PRÓXIMA    HH:MM:SS     │"
"│   ◑    1  Completa ││    ██   ██   ██                ││   personal  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  DISPOSIT.  1/1 local    │"
"│   ◐    1  En progr ││    ██   ██   ██                ││   refactor  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││                          │"
"│   ○    2  Pendient ││   17   18   19   20   21   22  ││                                  ││         ⌬                │"
"│   !    0  Vencidas ││                                ││                                  ││                          │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [p → toggle] [Esc → close] [: → cmd] [q → quit]  · ? more                                                       "
