crates/rondo-tui/tests/snapshots/snapshots__search_overlay.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                  ⊙ ONLINE · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────┐┏━ inbox · 4 tareas ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"   ◉ INBOX       3          ESTADO  PRI     TAREA                                                                       "
"   ◷ HOY         1      ▌ ▌ [ ]  ◖URG◗  Refactor pomodoro module  ◖in 1d◗  blocked  #refactor #work                     "
"   ⏵ PRÓXIMAS    2        ▏ [ ]  ◖low◗  Buy groceries  ◖in 2d◗  #personal                                               "
"   ⛀ PROYECTOS   4        ▍ [•]  ◖high◗  Review API spec  ◖today◗  ◔ 1/5  #backend #work                                "
"   ◆ ETIQUETAS   4              ↳ Setup repo                                                                            "
"   ⊟ CALENDARIO           ▎ [x]  ◖med◗  Deploy v2.1  ◖overdue◗                                                          "
"   ▤ ANÁLISIS                                                                                                           "
"   ⌬ GRAFO                                                                                                              "
"   ⊳ AUTOMAT.                                                                                                           "
"   ✕ PAPELERA                                                                                                           "
"└────────────────────┘                                                                                                  "
"┌─ filtros ──────────┐                                                                                                  "
"   !  URGENTES                                                                                                          "
"   ↑  ALTA PRIO                                                                                                         "
"   @  ASIG. A MÍ                                                                                                        "
"   #  SIN ETIQUETA                                                                                                      "
"   ✓  COMPLETADAS                                                                                                       "
"   ◷  VENCIDAS          PROGRESO GENERAL  [▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱] 25%   1/4      "
"                                                                                                                        "
"└────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ vista general ────┐┌─ próximas 7 días ──────────────┐┌─ distribución por tag ───────────┐┌─ sincronización ─────────┐"
"                           1    1    1                      work      ▰▰▰▱▱▱▱▱▱▱▱▱   2 (33     ESTADO     Conectado     "
"    4  TOTAL               ██   ██   ██                     (sin tag) ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16     ÚLTIMA     HH:MM:SS      "
"                           ██   ██   ██                     backend   ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16     PRÓXIMA    HH:MM:SS      "
"  ┌ / search ────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │ / deploy▏   1 match                                                                                              │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [INS]  [Enter → apply] [Esc → cancel]  · ? more                                                                        "
