crates/rondo-tui/tests/snapshots/snapshots__sort_overlay_created_desc.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                      ⊙ RO · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────────┐┏━ inbox · 3 tareas · newest first ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│  [i] ◉ INBOX       3   │┃     ESTADO  PRI     TAREA                                                                  ┃"
"│  [t] ◷ HOY         1   │┃   ▍ [•]   ◖high◗  Review API spec   ◖today◗   ◔ 1/5                                        ┃"
"│  [p] ⏵ PRÓXIMAS    2   │┃           ↳ Setup repo                                                                     ┃"
"│  [A] ◇ TODAS       4   │┃           ↳ Config testing                                                                 ┃"
"└────────────────────────┘┃           #backend  #work                                                                  ┃"
"┌─ filtros rápidos ──────┐┃   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌   ┃"
"│  [u] ! URGENTES    1   │┃   ▏ [ ]   ◖low◗  Buy groceries   ◖in 2d◗                                                   ┃"
"│  [H] ↑ ALTA PRIO   2   │┃           #personal                                                                        ┃"
"│  [o] ⌧ VENCIDAS        │┃   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌   ┃"
"│  [P] ◐ EN PROGRESO 1   │┃ ▌ ▌ [ ]   ◖URG◗  Refactor pomodoro module   ◖in 1d◗   ⛒ blocked                            ┃"
"│  [n] # SIN ETIQUETA 1  │┃           #refactor  #work                                                                 ┃"
"│  [c] ✓ COMPLETADAS 1   │┃         ┌ sort by ─────────────────────────────────────┐                                   ┃"
"│                        │┃         │  [1] default (status, priority, due)         │                                   ┃"
"│                        │┃         │  [2] priority (high to low)                  │                                   ┃"
"│                        │┃         │  [3] due date (soonest first)                │                                   ┃"
"│                        │┃         │▌ [4] newest first                            │                                   ┃"
"│                        │┃         │  [5] title (A-Z)                             │                                   ┃"
"│                        │┃ PROGRESO└──────────────────────────────────────────────┘▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱] 25%   1/4     ┃"
"│                        │┃                                                                                            ┃"
"└────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ vista general ────┐┌─ próximas 7 días ──────────────┐┌─ distribución por tag ───────────┐┌─ sincronización ─────────┐"
"│                    ││    1    1    1                 ││   work      ▰▰▰▱▱▱▱▱▱▱▱▱   2 (33 ││  ESTADO     Conectado    │"
"│   4  TOTAL         ││    ██   ██   ██                ││   (sin tag) ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  ÚLTIMA     HH:MM:SS     │"
"│                    ││    ██   ██   ██                ││   backend   ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  PRÓXIMA    HH:MM:SS     │"
"│   ◑    1  Completa ││    ██   ██   ██                ││   personal  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  DISPOSIT.  1/1 local    │"
"│   ◐    1  En progr ││    ██   ██   ██                ││   refactor  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││                          │"
"│   ○    2  Pendient ││   17   18   19   20   21   22  ││                                  ││         ⌬                │"
"│   !    0  Vencidas ││                                ││                                  ││                          │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [a → add] [space → status] [A → + subtarea] [B → + dep] [v → select]  · ? ayuda                                 "
