crates/rondo-tui/tests/snapshots/snapshots__sort_overlay_default.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0          // ADVANCED TASK MANAGEMENT SYSTEM //                         ⊙ RO · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navigation ───────────┐┏━ inbox · 3 tasks · default (status, priority, due) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│  [i] ◉ INBOX       3   │┃     STATUS  PRI     TASK                                                                   ┃"
"│  [t] ◷ TODAY       1   │┃ ▌ ▌ [ ]   ◖URG◗  Refactor pomodoro module   ◖in 1d◗   ⛒ blocked                            ┃"
"│  [p] ⏵ UPCOMING    2   │┃           #refactor  #work                                                                 ┃"
"│  [A] ◇ ALL         4   │┃   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌   ┃"
"└────────────────────────┘┃   ▏ [ ]   ◖low◗  Buy groceries   ◖in 2d◗                                                   ┃"
"┌─ quick filters ────────┐┃           #personal                                                                        ┃"
"│  [u] ! URGENT      1   │┃   ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌   ┃"
"│  [H] ↑ HIGH PRIO   2   │┃   ▍ [•]   ◖high◗  Review API spec   ◖today◗   ◔ 1/5                                        ┃"
"│  [o] ⌧ OVERDUE         │┃           ↳ Setup repo                                                                     ┃"
"│  [P] ◐ IN PROGRESS 1   │┃           ↳ Config testing                                                                 ┃"
"│  [n] # UNTAGGED    1   │┃           #backend  #work                                                                  ┃"
"│  [c] ✓ DONE        1   │┃         ┌ sort by ─────────────────────────────────────┐                                   ┃"
"│                        │┃         │▌ [1] default (status, priority, due)         │                                   ┃"
"│                        │┃         │  [2] priority (high to low)                  │                                   ┃"
"│                        │┃         │  [3] due date (soonest first)                │                                   ┃"
"│                        │┃         │  [4] newest first                            │                                   ┃"
"│                        │┃         │  [5] title (A-Z)                             │                                   ┃"
"│                        │┃ OVERALL └──────────────────────────────────────────────┘▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱] 25%   1/4     ┃"
"│                        │┃                                                                                            ┃"
"└────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ overview ─────────┐┌─ next 7 days ──────────────────┐┌─ tag distribution ───────────────┐┌─ sync ───────────────────┐"
"│                    ││    1    1    1                 ││   work      ▰▰▰▱▱▱▱▱▱▱▱▱   2 (33 ││  STATUS     Connected    │"
"│   4  TOTAL         ││    ██   ██   ██                ││   (untagged)▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  LAST       HH:MM:SS     │"
"│                    ││    ██   ██   ██                ││   backend   ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  NEXT       HH:MM:SS     │"
"│   ◑    1  Complete ││    ██   ██   ██                ││   personal  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  DEVICE     1/1 local    │"
"│   ◐    1  In progr ││    ██   ██   ██                ││   refactor  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││                          │"
"│   ○    2  Pending  ││   17   18   19   20   21   22  ││                                  ││         ⌬                │"
"│   !    0  Overdue  ││                                ││                                  ││                          │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [a → add] [space → status] [v → select] [B → + dep] [: → cmd]  · ? help                                         "
